tests/NormalTests/paczka1/fuzzy1/22228165.err
Error in line 10: S47 S561 82,8
Error in line 11: S47 S920 61,7
Error in line 19: Ln1RwRZll S47 61,5
Error in line 28: Ln1RwRZll S920 89,7
